# yachiyo-claw

./: .gitattributes  .gitignore  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  capacitor.config.ts  electron-builder.yml  electron.vite.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  toolchain.lock.json  tsconfig.json
.erb/scripts/: delete-source-maps.js
.github/workflows/: android.yml
android/: build.gradle  variables.gradle
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  yachiyo_llama_jni.cpp
android/gradle/wrapper/: gradle-wrapper.properties
docs/: ANDROID_IN_APP_UPDATE.md  BUILDING.md  README.zh-CN.md  ROADMAP.md  SECURITY_MODEL.md
docs/technical/: auto-updater.md
patches/: @capacitor-community__sqlite@7.0.3.patch  capacitor-stream-http@0.1.0.patch
scripts/: bootstrap-toolchain.ps1  check-android-native-logs.mjs  evaluate-android-webview.mjs  generate-android-brand-assets.mjs  generate-local-signing-key.ps1  generate-route-tree.mjs  prepare-live2d-assets.mjs  start-adb-root-bridge.ps1  verify-android-update-release.mjs  yachiyo-env.ps1
src/main/: app-updater.ts  autoLauncher.ts  deeplinks.ts  main.ts  menu.ts  store-node.ts
src/main/adapters/: sentry.ts
src/main/oauth/: callback-server.ts
src/renderer/: app.tsx  index.ejs  index.html  index.tsx  index.web.ejs
src/renderer/adapters/: index.ts
src/renderer/components/: Mermaid.tsx  ReasoningStrengthControl.tsx  svg-sanitizer.test.ts  svg-sanitizer.ts
src/renderer/hooks/: useAppTheme.ts  useChatboxAIModels.ts  (+5 more)
src/shared/: defaults.test.ts  defaults.ts
(+349 files in other folders)
